settings_tables: Prevent header/icon collapse onto second line.

--- a/web/styles/app_components.css
+++ b/web/styles/app_components.css
@@ -775,6 +775,12 @@ input.settings_text_input {
     }
 
     & thead th {
+        /* Prevent headers from collapsing.
+           For headers that sort, this keeps
+           the icon on the same line as the
+           header text. */
+        min-width: max-content;
+        white-space: nowrap;
         color: inherit;
         word-break: normal;
 
